<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1DBDB"
    android:backgroundTint="#E1DBDB"
    tools:context=".IT19162706.Admin_add_new_product">

    <RelativeLayout
        android:id="@+id/RLHEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3CC66">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/AddProductInterface"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LNNAV"
        android:layout_below="@+id/RLHEADER"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/click"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/IV_ADMIN_ADD_PRODUCT_IMAGE"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/textView9"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/addimage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/IV_ADMIN_ADD_PRODUCT_IMAGE"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:padding="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/itemNameView"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/ED_PRODUCT_NAME"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/stroke"
                        android:ems="10"
                        android:hint="@string/entername"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColorHint="#000000" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:padding="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/ItemPriceView"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/ED_PRODUCT_PRICE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/stroke"
                        android:ems="10"
                        android:hint="@string/enterprice"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColorHint="#000000" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:padding="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/productDets"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <EditText
                        android:id="@+id/ED_PRODUCT_DESCRIPTION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/stroke"
                        android:ems="10"
                        android:hint="@string/entername"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:textColorHint="#000000" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:padding="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/occasion"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <Spinner
                        android:id="@+id/spinnerAddProductOccasion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:padding="15dp"
                        android:spinnerMode="dialog"
                        android:splitMotionEvents="true" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="30dp"
                        android:padding="5dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/availabale"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />

                    <Spinner
                        android:id="@+id/spinnerAddProductAvailabiity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:padding="15dp"
                        android:spinnerMode="dropdown"
                        android:splitMotionEvents="false" />

                    <Button
                        android:id="@+id/btn_save_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/buttons_admin"
                        android:text="@string/AddProductSave"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />

                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/LNNAV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#E3CC66"
        android:backgroundTint="#E3CC66"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="#E3CC66"
            android:backgroundTint="#E3CC66"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/home" />

            <ImageButton
                android:id="@+id/btnOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/cart" />

            <ImageButton
                android:id="@+id/btnProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/occasion" />

            <ImageButton
                android:id="@+id/btnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="#E3CC66"
            android:backgroundTint="#E3CC66"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="-5dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/menu_home"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/View_orders"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/prod_interface"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/view_account"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>