...
    <string name="View_orders">Orders</string>
    <string name="view_products">Products</string>
    <string name="prod_interface">Products</string>
    <string name="itemNameView">Item Name</string>
    <string name="ItemPriceView">Item Price</string>
    <string name="selectOcassion">Select Occasion</string>
    <string name="prodConfirm">Save</string>
    <string name="occassion1">Valentine\'s Day</string>
    <string name="Occassion2">Birthdays</string>
    <string name="Occassion3">Weddings</string>
    <string name="Occassion4">Promotions</string>
    <string name="Occasion5">Casual Party</string>
    <string name="Occassion6">Bridal Shower</string>
...
